@@ -19,27 +19,7 @@ import zope.location.location
 
 from zope import interface
 from zope.schema.interfaces import WrongType
-from zope.security.checker import NamesChecker, defineChecker
-
 from grokcore.view.util import url
-from grokcore.security.util import check_permission
-
-
-def make_checker(factory, view_factory, permission, method_names=None):
-    """Make a checker for a view_factory associated with factory.
-
-    These could be one and the same for normal views, or different
-    in case we make method-based views such as for JSON and XMLRPC.
-    """
-    if method_names is None:
-        method_names = ['__call__']
-    if permission is not None:
-        check_permission(factory, permission)
-    if permission is None or permission == 'zope.Public':
-        checker = NamesChecker(method_names)
-    else:
-        checker = NamesChecker(method_names, permission)
-    defineChecker(view_factory, checker)
 
 
 def safely_locate_maybe(obj, parent, name):
