@@ -4,6 +4,10 @@ Grok changes
 1.3 (unreleased)
 ================
 
+- The `IGrokSecurityView` interface has been to ``grokcore.view``. 
+
+- The `make_checker` util function has been moved to ``grokcore.view``. 
+
 - Update to latest martian and grokcore.component.
 
 1.2.1 (2010-10-26)
